[package]
name = "consensus"
version = "6.5.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"

log = "0.4"
log4rs = { version = "1.0", features = ["gzip"] }
cita-types = "0.1"
time = "0.1"
lru-cache = "0.1"
min-max-heap = "1.2"
hex = "0.4"

cloud-util = "0.3.0"
cita_cloud_proto = "6.5.0"
status_code = { package = "cloud-code", version = "0.3.0" }

tonic = "0.5"
prost = "0.8"
tokio = { version = "1.17", features = ["full"] }
toml = "0.5"
clap = { version = "3.1", features = ["derive"] }
backtrace = "0.3"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
