[package]
name = "consensus"
version = "6.6.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"

log = "0.4"
log4rs = { version = "1.1", features = ["gzip"] }
cita-types = "0.1"
time = "0.3"
lru-cache = "0.1"
min-max-heap = "1.3"
hex = "0.4"

cloud-util = "0.4.1"
cita_cloud_proto = "6.6.0"
status_code = { package = "cloud-code", version = "0.4.0" }

tonic = "0.7"
prost = "0.10"
tokio = { version = "1.20", features = ["full"] }
toml = "0.5"
clap = { version = "3.2", features = ["derive"] }
backtrace = "0.3"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
